[package]
name = "runderer"
version = "0.1.0"
authors = ["Matouš Dzivjak <matousdzivjak@gmail.com>"]
edition = "2018"
description = "Tinyrenderer implemented in rust."
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.14"
tobj = "3.0.1"
nalgebra = "0.26.2"
rand = "0.8.3"
